# EIS-RV

./: .clangd  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BRANDING_RAMAN_FINAL.md  CHANGELOG.md  CLEANUP_COMPLETE.md  CLEANUP_ROUND_2_SUMMARY.md  CLICK_TO_DEPLOY.md  COMPETITIVE_ANALYSIS_AND_UPGRADE_PLAN.md  CONTRIBUTING.md  CRITICAL_ACTION_REQUIRED.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOY_NOW.bat  DEPLOY_NOW.md  Dockerfile  FINAL_PROJECT_SUMMARY.md  INSTANT_DEPLOY.md  LICENSE  NVIDIA_ALCHEMI_SETUP.md  PHASE_1_COMPLETE.md  PHASE_2_ALCHEMI_INTEGRATION.md  PHASE_5_ENTERPRISE_PLAN.md  PHASE_5_PROGRESS.md  PROJECT_COMPLETE.md  PROJECT_STATUS_SUMMARY.md  PYTHON_VERSION_FIX.md  Procfile  QUANTUM_ENGINE_SPECIFICATION.md  QUANTUM_UPGRADE_COMPLETE.md  QUICK_DEPLOY.sh  QUICK_START.md  README.md  READY_TO_DEPLOY.md  RESEARCHER_GUIDE.md  RVCE_Proposal_Varshini_CB.docx  (+48 more)
.github/workflows/: ci.yml  release.yml
.kiro/steering/: product.md  structure.md  tech.md
.venv_new/: pyvenv.cfg
EIS-RV/: EIS-RV-eagle-import.kicad_sym  EIS-RV.csv  EIS-RV.kicad_pcb  EIS-RV.kicad_prl  EIS-RV.kicad_pro  HELPStat_V2.brd  HELPStat_V2.sch  HELPStat_V2_1.kicad_sch  HELPStat_V2_BOM.xlsx  PCBWayQuotedBOM_5Sets_2024-01-11.xls  sym-lib-table
EIS-RV/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
alembic/: env.py
alembic/versions/: 01743fdf06aa_initial_phase_5_enterprise_schema.py
analytex_microwell_designer/: README.md  environment.yml  generate_example.py  main.py  requirements.txt
analytex_microwell_designer/analytex/: __init__.py
analytex_microwell_designer/output/: array_4x2_well.step  array_4x2_well.stl  high_sensitivity_well.step  standard_single_well.step  standard_single_well.stl
analytex_microwell_designer/presets/: array_sensing.json  high_sensitivity.json  low_volume.json  standard_well.json
certs/: README.md  fullchain.pem  nginx.crt  nginx.key  privkey.pem
data/: projects.json
data/reports/: 330e3f8e.json  afe73deb.json  c5185280.json
datasets/: materials_cache.db  raman_agent_interactions.json
dev_tools/sentinel/: DASHBOARD.html  LATEST_INTEL.md  calibrate_priors.py  orchestrator.py  sota_intel.db  watcher.py
docs/: ALCHEMI_UTILIZATION.md  UPGRADE_NOTES.md
engine_core/: CMakeLists.txt
engine_core/bindings/: pybind_module.cpp
engine_core/include/raman/: circuit_fitter.hpp  cv_solver.hpp  diffusion_solver.hpp  drt_solver.hpp  eis_solver.hpp  types.hpp
engine_core/src/: circuit_fitter.cpp  cv_solver.cpp  diffusion_solver.cpp  drt_solver.cpp  eis_solver.cpp
engine_core/tests/: test_cv_solver.cpp  test_eis_solver.cpp  test_kk_solver.cpp
examples/advanced/: 03_custom_convergence.py  04_mace_nvt.py  05_custom_integrator.py  06_ewald_electrostatics.py  07_composable_model_composition.py  08_aimnet2_ewald_pipeline.py
examples/basic/: 01_data_structures.py  03_ase_integration.py  05_nvt_langevin.py
examples/distributed/: 01_distributed_pipeline.py
models/Raman-Qwen-Agent/: README.md  adapter_model.safetensors  training_logs.json
resources/: entitlements.mac.plist
scripts/: build_cpp.py  build_electron.js  build_nuitka.py  import_agv_xlsx.py  train_pde_surrogate.py
src/ai_engine/: __init__.py  agent_server.py  alchemi_bridge.py  nim_client.py  requirements_313.txt  server.py
src/backend/: __init__.py  cli.py
src/desktop/: auto-updater.js  (+3 more)
tests/: test_api_endpoints.py  test_core.py
vanl/: .env.example  README.md  __init__.py  _db_stats.py  _test_engines.py  requirements.txt
(+308 files in other folders)
